Test CI/CD - primer despliegue automático